# Crypto-messanger-rust

./: README.md
client/: Cargo.toml  index.html
client/src/: crypt.rs  data.rs  dialog.rs  dialogs.rs  main.rs  message.rs  rsa_crypto.rs  user.rs  wss.rs
client/templates/html/: index.html
server/: Cargo.toml  test.py
server/src/: data.rs  main.rs  server.rs  session.rs  user.rs
