[package]
name = "yew-try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
web-sys = { version="0.3.60", features=[ 
    "Window", 
    "Crypto", 
    "SubtleCrypto", 
    "CryptoKey", 
    "CryptoKeyPair",
    "Request",
    "Response",
    "RequestInit"
    ] }
base64 = "0.13.1"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
futures = "0.3.17"
reqwasm = "0.5"
serde = {version="1", features=["derive"]}
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
derive_more = "0.99.17"