[package]
name = "actix_web-try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix = "0.13"
actix-web-actors = "4.1"
serde = {version="1", features=["derive"]}
serde_json = "1"
getrandom = "0.2.8"
base64 = "0.13.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
env_logger = "0.9.0"
log = "0.4.17"